test/fixtures/syntaxerrors/wasm.lys.ast.desugar
|-Document(0,101)
  |-FunctionDirective(0,26)
    |-Decorators(0,0)
      <Rule0>
    |-FunDeclaration(0,26)
      |-FunctionName(4,5)
        |-NameIdentifier(4,5)
          |-Identifier=x
      |-TypeParameters(5,5)
        <Rule0>
      |-FunctionParamsList(5,7)
        |-(List)(6,6)
          <Rule0>
      |-ReturnType(7,14)
        |-Reference(9,13)
          |-QName(9,13)
            |-NameIdentifier(9,13)
              |-Identifier=void
      |-FunctionBody(14,26)
        |-WasmExpression(16,26)
          <Rule0>
  |-FunctionDirective(26,47)
    |-Decorators(26,26)
      <Rule0>
    |-FunDeclaration(26,47)
      |-FunctionName(30,31)
        |-NameIdentifier(30,31)
          |-Identifier=x
      |-TypeParameters(31,31)
        <Rule0>
      |-FunctionParamsList(31,33)
        |-(List)(32,32)
          <Rule0>
      |-ReturnType(33,40)
        |-Reference(35,39)
          |-QName(35,39)
            |-NameIdentifier(35,39)
              |-Identifier=void
      |-FunctionBody(40,47)
        |-WasmExpression(42,47)
          |-<SyntaxError>=A block of symbolic expressions was expected
  |-FunctionDirective(49,77)
    |-Decorators(49,49)
      <Rule0>
    |-FunDeclaration(49,77)
      |-FunctionName(53,54)
        |-NameIdentifier(53,54)
          |-Identifier=x
      |-TypeParameters(54,54)
        <Rule0>
      |-FunctionParamsList(54,56)
        |-(List)(55,55)
          <Rule0>
      |-ReturnType(56,63)
        |-Reference(58,62)
          |-QName(58,62)
            |-NameIdentifier(58,62)
              |-Identifier=void
      |-FunctionBody(63,77)
        |-WasmExpression(65,77)
          |-QName(71,74)
            |-NameIdentifier(71,74)
              |-Identifier=asd
  |-FunctionDirective(77,98)
    |-Decorators(77,77)
      <Rule0>
    |-FunDeclaration(77,98)
      |-FunctionName(81,82)
        |-NameIdentifier(81,82)
          |-Identifier=x
      |-TypeParameters(82,82)
        <Rule0>
      |-FunctionParamsList(82,84)
        |-(List)(83,83)
          <Rule0>
      |-ReturnType(84,91)
        |-Reference(86,90)
          |-QName(86,90)
            |-NameIdentifier(86,90)
              |-Identifier=void
      |-FunctionBody(91,98)
        |-WasmExpression(93,98)
          |-<SyntaxError>=A block of symbolic expressions was expected
  |-<UNEXPECTED TOKEN>=(
  |-<UNEXPECTED TOKEN>=)